<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLockName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="Janet's Front Door"
        style="@style/settings_lockdetails_subheadertv"/>

    <TableLayout
        android:id="@+id/anti_theft_t9_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:dividerPadding="@dimen/keyboard_corner_padding"
        android:showDividers="beginning|end|middle"
        android:divider="#00ff00">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/anti_theft_t9_key_1"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_one"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>

            <TextView
                android:id="@+id/anti_theft_t9_key_2"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_two"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>


            <TextView
                android:id="@+id/anti_theft_t9_key_3"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_three"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/anti_theft_t9_key_4"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_four"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>

            <TextView
                android:id="@+id/anti_theft_t9_key_5"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_five"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>

            <TextView
                android:id="@+id/anti_theft_t9_key_6"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_six"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/anti_theft_t9_key_7"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_seven"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>

            <TextView
                android:id="@+id/anti_theft_t9_key_8"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_eight"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>

            <TextView
                android:id="@+id/anti_theft_t9_key_9"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_nine"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/anti_theft_t9_key_star"
                style="@style/anti_theft_t9_key"
                android:text="@string/anti_theft_keyboard_star"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>

            <TextView
                android:id="@+id/anti_theft_t9_key_0"
                style="@style/anti_theft_t9_key"
                android:text="@string/number_zero"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>

            <TextView
                android:id="@+id/anti_theft_t9_key_al"
                style="@style/anti_theft_t9_key"
                android:text="@string/text_al"
                android:textIsSelectable="false"
                android:background="@drawable/lockkeyboard_bg_selector"/>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/actionbar_background">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/footer_btn_padding"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#00000000"/>

        <ImageButton
            android:id="@+id/ibHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/footer_btn_padding"
            android:src="@drawable/ic_house"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#00000000"/>
    </RelativeLayout>
</RelativeLayout>