<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.napcosecurity.android.ilock.ui.activities.AddLockActivity"
                tools:ignore="RtlHardcoded" >

    <LinearLayout
        android:id="@+id/mainContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footerLayout"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/abc_button_padding_horizontal_material">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|start"
            android:padding="@dimen/tv_padding"
            android:text="@string/addlock_instruction"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|start"
            android:padding="@dimen/tv_padding"
            android:text="@string/addlock_enter_name"
            android:textColor="@color/tv_bold"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etLockName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|start"
            android:hint="@string/addlock_hint_nametoshow"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="@dimen/tv_padding"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|start"
            android:padding="@dimen/tv_padding"
            android:text="@string/addlock_enter_pass"
            android:textColor="@color/tv_bold"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etLockPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|start"
            android:hint="@string/addlock_enter_pass"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/tv_padding"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/tv_padding"
            android:text="@string/addlock_pass_instruction"
            android:textColor="@color/tv_bold"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:src="#323232"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/ck_savepass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_savepassTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ck_savepass"
                android:layout_toRightOf="@+id/ck_savepass"
                android:gravity="left|start"
                android:maxLines="1"
                android:padding="@dimen/tv_padding2"
                android:text="@string/addlock_savepassphrase"
                android:textColor="@color/tv_bold"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_savepassTitle"
                android:layout_toEndOf="@+id/ck_savepass"
                android:layout_toRightOf="@+id/ck_savepass"
                android:gravity="left|start"
                android:padding="@dimen/tv_padding2"
                android:text="@string/addlock_savepass_hint"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/ck_keypad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ck_keypad"
                android:layout_toRightOf="@+id/ck_keypad"
                android:gravity="left|start"
                android:maxLines="1"
                android:padding="@dimen/tv_padding2"
                android:text="@string/addlock_enable_keypad"
                android:textColor="@color/tv_bold"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_lock"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footerLayout"
        android:gravity="right|end"
        android:padding="@dimen/tv_padding2"
        android:text="Add Lock"/>

    <RelativeLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/actionbar_background">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#00000000"
            android:padding="@dimen/footer_btn_padding"
            android:src="@drawable/ic_back"/>

        <ImageButton
            android:id="@+id/ibHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:padding="@dimen/footer_btn_padding"
            android:src="@drawable/ic_house"/>
    </RelativeLayout>
</RelativeLayout>
