<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/headerLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:orientation="vertical">

		<TextView
			android:id="@+id/tvEnrollNewLock"
			style="@style/settings_itemtv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/abc_list_selector_holo_dark"
			android:clickable="true"
			android:onClick="enrollNewLock"
			android:text="@string/tv_newlock" />


		<ImageView
			android:layout_width="match_parent"
			android:layout_height="2px"
			android:src="#323232" />

		<TextView
			android:id="@+id/tvBatteryStatus"
			style="@style/settings_itemtv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/abc_list_selector_holo_dark"
			android:clickable="true"
			android:onClick="gotoBatteryStatus"
			android:text="@string/settings_battery_status" />

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="2px"
			android:src="#323232" />

		<TextView
			android:id="@+id/tvVersionName"
			style="@style/settings_headertv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<CheckBox
			android:id="@+id/ckDebugMode"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="Enable debug mode" />

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="2px"
			android:src="#323232" />

		<TextView
			style="@style/settings_headertv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_enrolledLocks" />

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="2px"
			android:src="#323232" />
	</LinearLayout>

	<ListView
		android:id="@+id/lvLockList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/footerLayout"
		android:layout_below="@+id/headerLayout" />

	<RelativeLayout
		android:id="@+id/footerLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@color/actionbar_background">

		<ImageButton
			android:id="@+id/ibBack"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:background="#00000000"
			android:padding="@dimen/footer_btn_padding"
			android:src="@drawable/ic_back" />

		<ImageButton
			android:id="@+id/ibHome"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:background="#00000000"
			android:padding="@dimen/footer_btn_padding"
			android:src="@drawable/ic_house" />
	</RelativeLayout>
</RelativeLayout>