<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.napcosecurity.android.ilock.ui.activities.SettingsLockDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footerLayout"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/abc_button_padding_horizontal_material">

            <TextView
                android:id="@+id/tvLockName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/tv_padding2"
                android:textColor="@color/tv_bold"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvLockId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                android:padding="@dimen/tv_padding2"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvLockMac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                android:padding="@dimen/tv_padding2"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvLockSlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                android:padding="@dimen/tv_padding2"
                android:text="@string/addlock_instruction"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                android:padding="@dimen/tv_padding2"
                android:text="Change Lock Name"
                android:textColor="@color/tv_bold"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etLockName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                android:hint="Enter New Lock Name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="@dimen/tv_padding2"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                android:padding="@dimen/tv_padding2"
                android:text="Change Lock Password"
                android:textColor="@color/tv_bold"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etLockPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                android:hint="Enter New Lock Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/tv_padding2"
                android:textSize="18sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:id="@+id/ck_savepass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tv_savepassTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ck_savepass"
                    android:layout_toRightOf="@+id/ck_savepass"
                    android:gravity="left|start"
                    android:maxLines="1"
                    android:padding="@dimen/tv_padding2"
                    android:text="@string/addlock_savepassphrase"
                    android:textColor="@color/tv_bold"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_savepassTitle"
                    android:layout_toEndOf="@+id/ck_savepass"
                    android:layout_toRightOf="@+id/ck_savepass"
                    android:gravity="left|start"
                    android:padding="@dimen/tv_padding2"
                    android:text="@string/addlock_savepass_hint"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/ck_keypad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ck_keypad"
                    android:layout_toRightOf="@+id/ck_keypad"
                    android:gravity="left|start"
                    android:maxLines="1"
                    android:padding="@dimen/tv_padding2"
                    android:text="@string/addlock_enable_keypad"
                    android:textColor="@color/tv_bold"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <CheckBox
                    android:id="@+id/ck_opUnattended"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="left|start"
                    android:maxLines="1"
                    android:padding="@dimen/tv_padding2"
                    android:text="@string/opUnattended"
                    android:textColor="@color/tv_bold"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/sp_unattendedTimeout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:entries="@array/unattendedTimeoutList"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_save_changes"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Save Changes"
                    android:textColor="#ffdd0e44"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_delete_lock"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Delete Lock"
                    android:textColor="@color/abc_search_url_text_normal"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/actionbar_background">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#00000000"
            android:padding="@dimen/footer_btn_padding"
            android:src="@drawable/ic_back"/>

        <ImageButton
            android:id="@+id/ibHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:padding="@dimen/footer_btn_padding"
            android:src="@drawable/ic_house"/>
    </RelativeLayout>
</RelativeLayout>
